chore: cleanup code base
