# utils/api.go
@@ -1,0 +1,12 @@
+package utils
+
+
+type ErrorResponse struct {
+	Code    string `json:"code"`
+	Message string `json:"message"`
+}
+
+type SuccessResponse struct {
+	Data    any    `json:"data"`
+	Message string `json:"message,omitempty"`
+}
